add basic structure, add template pages and template charts

--- a/quickstart/layouts/partials/footer.html
+++ b/quickstart/layouts/partials/footer.html
@@ -2,7 +2,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <p class="mb-0">Research Project - University of Glasgow</p>
+          <p class="mb-0">Individual Project - University of Glasgow</p>
         </div>
         <div class="col-md-6 text-md-end">
           <p class="mb-0">Built with Hugo & Bootstrap</p>
