--- a/quickstart/layouts/partials/navbar.html
+++ b/quickstart/layouts/partials/navbar.html
@@ -1,17 +1,24 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container">
-      <a class="navbar-brand" href="/">{{ .Site.Title }}</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          {{ range .Site.Menus.main }}
-          <li class="nav-item">
-            <a class="nav-link{{ if eq .URL $.RelPermalink }} active{{ end }}" href="{{ .URL }}">{{ .Name }}</a>
-          </li>
-          {{ end }}
-        </ul>
-      </div>
+  <div class="container">
+    <a class="navbar-brand" href="/">
+      {{ .Site.Title }}
+    </a>
+    
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav me-auto">
+        {{ range .Site.Menus.main }}
+        <li class="nav-item">
+          <a class="nav-link{{ if eq .URL $.RelPermalink }} active{{ end }}" href="{{ .URL }}">
+            {{ .Name }}
+            {{ if eq .Name "对比分析" }}<span class="badge bg-warning ms-2">New</span>{{ end }}
+          </a>
+        </li>
+        {{ end }}
+      </ul>
+      <form class="d-flex" action="/search">
+        <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+        <button class="btn btn-outline-light" type="submit">🔍</button>
+      </form>
     </div>
-  </nav>
+  </div>
+</nav>
