--- a/quickstart/layouts/comparison/single.html
+++ b/quickstart/layouts/comparison/single.html
@@ -1,27 +1,47 @@
-
 <!DOCTYPE html>
 <html lang="en">
+<head>
   {{ partial "head.html" . }}
-  <body>
-    {{ partial "navbar.html" . }}
+</head>
+<body>
+  {{ partial "navbar.html" . }}
 
+  <div class="container my-4">
+    <h1>{{ .Title }}</h1>
+    <p>{{ .Description }}</p>
+
+    <!-- 添加 Chart.js 画布 -->
     <canvas id="peerReviewChart"
         width="400" height="200"
         data-labels='{{ .Params.chart.labels | jsonify }}'
         data-coding='{{ .Params.chart.coding | jsonify }}'
         data-essay='{{ .Params.chart.essay | jsonify }}'>
-</canvas>
+    </canvas>
 
-    <div class="container my-4">
+    <!-- 显示正文内容 -->
+    <div class="content">
       {{ .Content }}
     </div>
 
-    {{ partial "footer.html" . }}
-  </body>
+    <!-- Disqus 评论区 -->
+    {{ with .Site.Params.disqusShortname }}
+      <div id="disqus_thread"></div>
+      <script>
+          (function() {
+              var d = document, s = d.createElement('script');
+              s.src = 'https://{{ . }}.disqus.com/embed.js';
+              s.setAttribute('data-timestamp', +new Date());
+              (d.head || d.body).appendChild(s);
+          })();
+      </script>
+      <noscript>Please enable JavaScript to view the comments.</noscript>
+    {{ end }}
+  </div>
+
+  {{ partial "footer.html" . }}
+
+  <!-- 引入外部 JS -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="/js/chart-init.js"></script>
+</body>
 </html>
-
-
-
-
-<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="/js/chart-init.js"></script>
