--- a/quickstart/layouts/partials/navbar.html
+++ b/quickstart/layouts/partials/navbar.html
@@ -10,7 +10,7 @@
         <li class="nav-item">
           <a class="nav-link{{ if eq .URL $.RelPermalink }} active{{ end }}" href="{{ .URL }}">
             {{ .Name }}
-            {{ if eq .Name "对比分析" }}<span class="badge bg-warning ms-2">New</span>{{ end }}
+            {{ if eq .Name "Comparison analysis" }}<span class="badge bg-warning ms-2">New</span>{{ end }}
           </a>
         </li>
         {{ end }}
