--- a/quickstart/layouts/comparison/list.html
+++ b/quickstart/layouts/comparison/list.html
@@ -5,7 +5,7 @@
   </div>
 
   <div class="container mt-4">
-    <!-- 显示 description -->
+    <!-- description -->
     {{ with .Description }}
       <p class="lead text-center"><strong>Description:</strong> {{ . }}</p>
     {{ end }}
