Add more sections such like blog, factors, feedback

--- a/quickstart/layouts/_default/baseof.html
+++ b/quickstart/layouts/_default/baseof.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
+<script src="https://cdn.jsdelivr.net/npm/lunr@2.3.9/lunr.min.js"></script>
+<script src="/js/search.js"></script>
+
   <head>
     {{ partial "head.html" . }}  <!-- Import head.html -->
   </head>
