Complete search functionality, add tags and categories for content filtering

--- a/quickstart/layouts/_default/baseof.html
+++ b/quickstart/layouts/_default/baseof.html
@@ -4,17 +4,20 @@
 <script src="/js/search.js"></script>
 
   <head>
-    {{ partial "head.html" . }}  <!-- Import head.html -->
+    {{ partial "head.html" . }}
   </head>
   <body>
-    {{ partial "navbar.html" . }}  <!-- Import Navibar here -->
+    {{ partial "navbar.html" . }}
 
     <main class="container my-4">
+      <!-- Add breadcrumbs, but don't show on homepage -->
+      {{ if ne .Kind "home" }}
+        {{ partial "breadcrumbs.html" . }}
+      {{ end }}
+      
       {{ block "main" . }}{{ end }}
     </main>
 
     {{ partial "footer.html" . }}
   </body>
 </html>
-
-
