--- a/quickstart/layouts/partials/navbar.html
+++ b/quickstart/layouts/partials/navbar.html
@@ -1,10 +1,16 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary sticky-top">
   <div class="container">
     <a class="navbar-brand" href="/">
       {{ .Site.Title }}
     </a>
     
-    <div class="collapse navbar-collapse">
+    <!-- Mobile toggle button -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarContent" 
+            aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    
+    <div class="collapse navbar-collapse" id="navbarContent">
       <ul class="navbar-nav me-auto">
         {{ range .Site.Menus.main }}
         <li class="nav-item">
@@ -15,8 +21,8 @@
         </li>
         {{ end }}
       </ul>
-      <form class="d-flex" action="/search">
-        <input class="form-control me-2" type="search" placeholder="Search..." aria-label="Search">
+      <form class="d-flex" action="/search" method="get">
+        <input class="form-control me-2" type="search" name="q" placeholder="Search..." aria-label="Search">
         <button class="btn btn-outline-light" type="submit">🔍</button>
       </form>
     </div>
