--- a/quickstart/layouts/search/list.html
+++ b/quickstart/layouts/search/list.html
@@ -1,6 +1,18 @@
 {{ define "main" }}
 <div class="container my-4">
-  <h1>{{ .Title }}</h1>
+  <h1>Search</h1>
+  
+  <!-- Search form for this page -->
+  <div class="row justify-content-center mb-4">
+    <div class="col-md-8">
+      <form class="d-flex" action="/search" method="get">
+        <input class="form-control me-2" type="search" name="q" placeholder="Search..." aria-label="Search">
+        <button class="btn btn-primary" type="submit">Search</button>
+      </form>
+    </div>
+  </div>
+  
+  <!-- Search results will be populated here by JavaScript -->
   <div id="search-results"></div>
 </div>
 {{ end }}
