--- a/quickstart/layouts/_default/baseof.html
+++ b/quickstart/layouts/_default/baseof.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <script src="https://cdn.jsdelivr.net/npm/lunr@2.3.9/lunr.min.js"></script>
 <script src="/js/search.js"></script>
+<script src="/js/lazy-load.js"></script>
 
   <head>
     {{ partial "head.html" . }}
