--- a/quickstart/layouts/comparison/linechart.html
+++ b/quickstart/layouts/comparison/linechart.html
@@ -19,6 +19,9 @@
       <div class="content">
         {{ .Content }}
       </div>
+
+      <!-- Add comments section -->
+        {{ partial "comments.html" . }}
     </main>
 
     {{ partial "footer.html" . }}
