--- a/quickstart/layouts/comparison/code-vs-essay.html
+++ b/quickstart/layouts/comparison/code-vs-essay.html
@@ -25,18 +25,7 @@
     </div>
 
     <!-- Disqus comment block -->
-    {{ with .Site.Params.disqusShortname }}
-      <div id="disqus_thread"></div>
-      <script>
-          (function() {
-              var d = document, s = d.createElement('script');
-              s.src = 'https://{{ . }}.disqus.com/embed.js';
-              s.setAttribute('data-timestamp', +new Date());
-              (d.head || d.body).appendChild(s);
-          })();
-      </script>
-      <noscript>Please enable JavaScript to view the comments.</noscript>
-    {{ end }}
+    {{ partial "comments.html" . }}
   </div>
 
   {{ partial "footer.html" . }}
