--- a/quickstart/layouts/comparison/stacked-bar.html
+++ b/quickstart/layouts/comparison/stacked-bar.html
@@ -1,7 +1,7 @@
-<!-- layouts/comparison/stacked-bar.html -->
 {{ define "main" }}
 <div class="container my-4">
   <h1>{{ .Title }}</h1>
+  <p>{{ .Description }}</p>
   
   <div class="chart-container">
     <canvas id="stackedBarChart"
@@ -15,7 +15,10 @@
   </div>
 </div>
 
-<!-- Load chart.js -->
+<!-- Add comments section -->
+{{ partial "comments.html" . }}
+
+<!-- Make sure this is at the end of the "main" block -->
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <script src="/js/stacked-bar-chart.js"></script>
 {{ end }}
