--- a/quickstart/layouts/_default/single.html
+++ b/quickstart/layouts/_default/single.html
@@ -4,7 +4,9 @@
     <div class="col-md-8">
       <!-- Title -->
       <h1 class="text-center">{{ .Title }}</h1>
-      <p class="text-muted text-center">{{ .Date.Format "January 2, 2006" }}</p>
+      {{ if gt .Date.Year 2000 }}
+        <p class="text-muted text-center">{{ .Date.Format "January 2, 2006" }}</p>
+      {{ end }}
 
       <!-- Categories and Tags -->
       <div class="text-center mb-4">
