--- a/quickstart/layouts/comparison/code-vs-essay.html
+++ b/quickstart/layouts/comparison/code-vs-essay.html
@@ -30,7 +30,7 @@
 
   {{ partial "footer.html" . }}
 
-  <!-- 引入外部 JS -->
+  <!-- Load chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="/js/chart-init.js"></script>
 </body>
